--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
   text-decoration: none;
   font-size: 17px;
   margin-top: 10px;
-
 }
   
 /* Navbar links on mouse-over */
@@ -48,12 +47,6 @@
   }
 }
 
-.search
-{
-  float: right;
-  color: rgb(139, 30, 30);
-  padding: 10px 30px;
-}
 
 .navbar input
 {
@@ -74,9 +67,9 @@
 /*------------------------------------------------------------------------FORM LAYOUT----------------------------------------------------------------------------------*/
 
 .bg-img {
-     background-image: url("https://www.fortisescorts.in/LP/complex-angioplasty/images/Fortis-Okhal-Banner.jpg");
-     min-height: 1710px;
-     margin-top: 1px;
+     background-image: url("https://assets.technologynetworks.com/production/dynamic/images/content/322699/hepatitis-c-drugs-reduce-liver-related-deaths-by-46-322699-640x360.jpg");
+     min-height: 980px;
+     margin-top: 2px;
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -89,21 +82,23 @@
   .container {
     position: absolute;
     align-content: center;
-    margin-left: 530px;
-    margin-top: 15px;
-    max-width: 500px;
+    margin-left: 525px;
+    margin-top: 10px;
+    max-width: 600px;
     padding: 15px;
     background-color: white;
+    border: 0cap;
+  
   }
   
   /* Full-width input fields */
     input[type=text], input[type=text] 
-  {
+    {
     width: 100%;
     padding: 15px;
-    margin: 5px 0 22px 0;
-    border: none;
-    background: whitesmoke
+    margin: 3px 0 20px 0;
+    border: 0cap;
+    background: #f1f1f1; 
   }
   
   input[type=text]:focus, input[type=text]:focus {
